--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+            rel="stylesheet"
+        />
         <meta property="og:image" content="public/thumbnail.jpg" />
     </head>
     <body>
